Update Tags in Swagger
